fixed logo z-index

--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,9 @@ ul {
 
 .logo-box {
     height: 100px;
+    position: relative;
+    background-color: var(--color-black);
+    z-index: 3;
 }
 .logo {
     display: block;
@@ -173,7 +176,7 @@ ul {
     background-color: var(--color-black);
     position: absolute;
     bottom: 0;
-    z-index: 5000;
+    z-index: 1;
 }
 .user-container {
     border-top: 1px solid var(--color-grey);
@@ -329,6 +332,9 @@ ul {
 }
 .gap-30 {
     gap: 30px;
+}
+.gap-20 {
+    gap: 20px;
 }
 
 /* media query */
